--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
             </fieldset>
 
             <fieldset>
-[cite_start]<p>Le mappe sono rappresentazioni grafiche (come fossero disegni) che ci aiutano a vedere meglio le singole tessere che compongono il puzzle e come si incastrano tra loro. [cite: 17] [cite_start]Sono delle strategie che ci permettono di organizzare le cose che conosciamo. [cite: 18] [cite_start]Prova a fare una mappa di te stesso (in pratica una bella fotografia di te stesso). [cite: 19]</p>
+<p>Le mappe sono rappresentazioni grafiche (come fossero disegni) che ci aiutano a vedere meglio le singole tessere che compongono il puzzle e come si incastrano tra loro. Sono delle strategie che ci permettono di organizzare le cose che conosciamo. Prova a fare una mappa di te stesso (in pratica una bella fotografia di te stesso). </p>
                 <legend>SCHEDA 1 – MAPPA DI DESCRIZIONE DI SÉ</legend>
                 <p>Elenca dieci aggettivi che ritieni essere i più adatti per descriverti. [cite: 20]</p>
 <div class="grid-inputs">
@@ -54,7 +54,7 @@
 </div>
                  <p>Utilizzando alcuni di questi aggettivi, descrivi dove e come li usi.</p>
                 <div id="mappa-container"></div>
-<p>Utilizzando alcuni di questi aggettivi, quelli che ritieni più importanti per descriverti, disegna una mappa di te stesso (sempre la famosa fotografia), in cui tu sei al centro del foglio (io sono), subito dopo: Inserisci i singoli aggettivi, scrivendoli intorno a “io sono”; Collega i vari aggetti direttamente al “io sono” (con te stesso) al centro del foglio, disegnando delle righe; [cite_start]Indica sotto o a fianco ad ogni aggettivo/qualità qual è il posto dove la usi di più, in quale attività e con chi (amici, compagni di scuola, genitori, allenatori, etc.). [cite: 22-25]</p>
+<p>Utilizzando alcuni di questi aggettivi, quelli che ritieni più importanti per descriverti, disegna una mappa di te stesso (sempre la famosa fotografia), in cui tu sei al centro del foglio (io sono), subito dopo: Inserisci i singoli aggettivi, scrivendoli intorno a “io sono”; Collega i vari aggetti direttamente al “io sono” (con te stesso) al centro del foglio, disegnando delle righe; Indica sotto o a fianco ad ogni aggettivo/qualità qual è il posto dove la usi di più, in quale attività e con chi (amici, compagni di scuola, genitori, allenatori, etc.). </p>
                 <button type="button" id="add-mappa-block">Aggiungi Descrizione</button>
                 <hr>
                 <label>Tra le attività che hai descritto, scegli le due che ti piacciono di più e prova a dire perché.</label>
