--- a/index.html
+++ b/index.html
@@ -110,7 +110,31 @@
                 </div>
 
             </fieldset>
-            
+
+            <fieldset>
+                <legend>SCHEDA 2 – UN PENSIERO SUL LAVORO</legend>
+
+                <div class="form-group">
+                    <label for="scheda2_cosa_e_lavoro">Secondo te, cosa è il lavoro?</label>
+                    <textarea id="scheda2_cosa_e_lavoro" name="scheda2_cosa_e_lavoro" rows="5"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label for="scheda2_perche_si_lavora">Perché le persone lavorano?</label>
+                    <textarea id="scheda2_perche_si_lavora" name="scheda2_perche_si_lavora" rows="5"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label for="scheda2_se_nessuno_lavorasse">Se nessuno lavorasse, cosa succederebbe?</label>
+                    <textarea id="scheda2_se_nessuno_lavorasse" name="scheda2_se_nessuno_lavorasse" rows="5"></textarea>
+                </div>
+
+                <div class="form-group">
+                    <label for="scheda2_come_mi_sento">Se penso al lavoro, mi sento...</label>
+                    <textarea id="scheda2_come_mi_sento" name="scheda2_come_mi_sento" rows="3"></textarea>
+                </div>
+
+            </fieldset>
             <button type="submit" class="submit-btn">Invia e Salva i Dati</button>
         </form>
         
