--- a/index.html
+++ b/index.html
@@ -114,10 +114,10 @@
                 <legend>SCHEDA 3 – MODI DI LAVORARE</legend>
                 <div class="instruction-text">
                     <p>Esistono quattro principali modi diversi di lavorare; quasi tutte le professioni o i lavori si svolgono lavorando un po' in un modo un po' in un altro: in genere, però, prevalgono le caratteristiche di uno di questi modi.</p>
-                    <p><strong>... con la GENTE:</strong> quando si hanno frequenti o continui rapporti con molte persone (con i clienti, i pazienti, gli allievi...).</p>
-                    <p><strong>... con i DATI:</strong> quando si ha a che fare con la registrazione, il calcolo, l'elaborazione di dati statistici, dati anagrafici, dati di mercato, calcoli numerici...</p>
-                    <p><strong>... con le IDEE:</strong> quando si producono concetti astratti, idee artistiche, scientifiche... o si riflette su di esse.</p>
-                    <p><strong>... con le COSE:</strong> quando si debbono manipolare dei materiali o degli oggetti per produrre o riparare manufatti.</p>
+                    <p><strong>... con la GENTE:</strong> quando si hanno frequenti o continui rapporti con molte persone (con i clienti, i pazienti, gli allievi...). Star bene con la gente ed avere facilità di rapporti con le persone è una caratteristica indispensabile per tanti professionisti diversi: gli insegnanti, i negozianti, i medici, i parrucchieri...</p>
+                    <p><strong>... con i DATI:</strong> quando si ha a che fare con la registrazione, il calcolo, l'elaborazione di dati statistici, dati anagrafici, dati di mercato, calcoli numerici... Lavorano con i dati soprattutto gli impiegati amministrativi, i ragionieri, i segretari, i ricercatori di mercato, gli economisti...</p>
+                    <p><strong>... con le IDEE:</strong> quando si producono concetti astratti, idee artistiche, scientifiche... o si riflette su di esse. In tutte le professioni si deve in qualche modo lavorare col cervello e quindi con le idee, ma certi lavori richiedono una capacità particolarmente sviluppata di riflettere, ragionare, inventare: è il caso, per esempio degli artisti, degli scienziati, dei filosofi...</p>
+                    <p><strong>... con le COSE:</strong> quando si debbono manipolare dei materiali o degli oggetti per produrre o riparare manufatti (materiali come il legno, il ferro, la stoffa... oggetti come l'automobile, la televisione...). Lavorano soprattutto con le cose gli agricoltori o gli artigiani come i sarti, i fabbri, i ceramisti, gli orafi...</p>
                     <hr>
                     <p>Ora, prova a compilare il questionario seguente, indicando quali modalità senti più tue (ti potrebbero piacere di più, pensando a come sei fatto).</p>
                 </div>
@@ -239,7 +239,9 @@
                 <h4 class="centered-subtitle">ADESSO - Come mi preparo al mio futuro?</h4>
                 <p class="instruction-text">Ora serve un ultimo sforzo per riflettere su come puoi arrivare a svolgere il lavoro che ti piace. Un primo tentativo di riflessione...</p>
                 <div class="form-group">
-                    <label for="scheda4_modo_studiare">Qual è il modo di studiare che funziona meglio per te? (Pensa a quando ti senti davvero coinvolto e riesci a capire meglio le cose: studiando da solo o in gruppo? Leggendo o facendo esercizi pratici? etc.)</label>
+                    <label for="scheda4_modo_studiare">Qual è il modo di studiare che funziona meglio per te? Prova a pensare a quando ti senti davvero coinvolto e riesci a capire meglio le cose (senza sforzo e fatica).
+Quando studi da solo oppure quando ascolti qualcuno che spiega? Quando studi da solo oppure in gruppo? Leggendo sui libri oppure su altri supporti? Studi meglio facendo esercizi o con l’applicazione pratica, magari nei laboratori? etc.
+ etc.)</label>
                     <textarea id="scheda4_modo_studiare" name="scheda4_modo_studiare" rows="6"></textarea>
                 </div>
 
