--- a/index.html
+++ b/index.html
@@ -28,16 +28,52 @@
         <div id="questionnaire-view" class="view" style="display: none;">
             <p class="questionnaire-subtitle">Classi I delle scuole secondarie di I grado</p>
             <form id="soi-form">
-                </form>
+                <fieldset>
+                    <legend>Dati dello Studente</legend>
+                    <div class="form-group"><label for="nome">Nome:</label><input type="text" id="nome" name="nome" required></div>
+                    <div class="form-group"><label for="cognome">Cognome:</label><input type="text" id="cognome" name="cognome" required></div>
+                    <div class="form-group"><label for="classe">Classe:</label><input type="text" id="classe" name="classe" required></div>
+                    <div class="form-group"><label for="data">Data:</label><input type="date" id="data" name="data" required></div>
+                </fieldset>
+                <fieldset>
+                    <legend>SCHEDA 1 – MAPPA DI DESCRIZIONE DI SÉ</legend>
+                    <p class="instruction-text">Le mappe sono rappresentazioni grafiche che ci aiutano a vedere meglio le singole tessere che compongono il puzzle e come si incastrano tra loro...</p>
+                    <p class="instruction-text"><strong>Elenca dieci aggettivi che ritieni essere i più adatti per descriverti.</strong></p>
+                    <div class="grid-inputs">
+                         <input type="text" name="aggettivo_1" placeholder="1."><input type="text" name="aggettivo_2" placeholder="2."><input type="text" name="aggettivo_3" placeholder="3."><input type="text" name="aggettivo_4" placeholder="4."><input type="text" name="aggettivo_5" placeholder="5."><input type="text" name="aggettivo_6" placeholder="6."><input type="text" name="aggettivo_7" placeholder="7."><input type="text" name="aggettivo_8" placeholder="8."><input type="text" name="aggettivo_9" placeholder="9."><input type="text" name="aggettivo_10" placeholder="10.">
+                    </div>
+                    <hr>
+                    <p class="instruction-text">Ora usa lo strumento qui sotto per costruire la tua mappa...</p>
+                    <div class="image-container"><p><strong>Esempio di mappa:</strong></p><img src="mappa-esempio.png" alt="Esempio di una mappa concettuale"></div>
+                    <div class="map-section">
+                        <div id="cy"></div>
+                        <div id="map-controls"><h3>Pannello di Controllo</h3><div id="controls-content"></div></div>
+                    </div>
+                    <hr>
+                    <details class="suggestions-container"><summary>Non trovi le parole? Clicca qui per una lista di aggettivi.</summary><table>...</table></details>
+                    <hr>
+                    <p class="instruction-text">Prova a pensare alle tue caratteristiche personali.</p>
+                    <div class="form-group"><label for="scheda1_attivita_preferite">Tra le attività che hai descritto...</label><textarea id="scheda1_attivita_preferite" name="scheda1_attivita_preferite" rows="5"></textarea></div>
+                    <div class="form-group"><label for="scheda1_preferenze_scolastiche">E rispetto alla scuola, cosa ti piace?</label><textarea id="scheda1_preferenze_scolastiche" name="scheda1_preferenze_scolastiche" rows="5"></textarea></div>
+                </fieldset>
+                <fieldset>
+                    <legend>SCHEDA 2 – UN PENSIERO SUL LAVORO</legend>
+                    </fieldset>
+                <fieldset>
+                    <legend>SCHEDA 3 – MODI DI LAVORARE</legend>
+                    </fieldset>
+                <fieldset>
+                    <legend>SCHEDA 4 – TUTTE LE POSSIBILI STRADE</legend>
+                    </fieldset>
+                <button type="submit" class="submit-btn">Invia e Salva i Dati</button>
+            </form>
             <div id="completion-section" style="display:none;">
                 <h2>Grazie per aver completato il questionario!</h2>
                 <p>Le tue risposte sono state salvate correttamente.</p>
                 <button id="download-pdf-btn">Scarica il Riepilogo in PDF</button>
             </div>
         </div>
-
     </main>
-
     <script src="script.js"></script>
 </body>
 </html>
