--- a/index.html
+++ b/index.html
@@ -35,38 +35,131 @@
                     <div class="form-group"><label for="classe">Classe:</label><input type="text" id="classe" name="classe" required></div>
                     <div class="form-group"><label for="data">Data:</label><input type="date" id="data" name="data" required></div>
                 </fieldset>
+
                 <fieldset>
                     <legend>SCHEDA 1 – MAPPA DI DESCRIZIONE DI SÉ</legend>
-                    <p class="instruction-text">Le mappe sono rappresentazioni grafiche che ci aiutano a vedere meglio le singole tessere che compongono il puzzle e come si incastrano tra loro...</p>
+                    <p class="instruction-text">Le mappe sono rappresentazioni grafiche che ci aiutano a vedere meglio le singole tessere che compongono il puzzle e come si incastrano tra loro. Sono delle strategie che ci permettono di organizzare le cose che conosciamo. Prova a fare una mappa di te stesso (in pratica una bella fotografia di te stesso).</p>
                     <p class="instruction-text"><strong>Elenca dieci aggettivi che ritieni essere i più adatti per descriverti.</strong></p>
-                    <div class="grid-inputs">
-                         <input type="text" name="aggettivo_1" placeholder="1."><input type="text" name="aggettivo_2" placeholder="2."><input type="text" name="aggettivo_3" placeholder="3."><input type="text" name="aggettivo_4" placeholder="4."><input type="text" name="aggettivo_5" placeholder="5."><input type="text" name="aggettivo_6" placeholder="6."><input type="text" name="aggettivo_7" placeholder="7."><input type="text" name="aggettivo_8" placeholder="8."><input type="text" name="aggettivo_9" placeholder="9."><input type="text" name="aggettivo_10" placeholder="10.">
-                    </div>
+                    <div class="grid-inputs"><input type="text" name="aggettivo_1" placeholder="1."><input type="text" name="aggettivo_2" placeholder="2."><input type="text" name="aggettivo_3" placeholder="3."><input type="text" name="aggettivo_4" placeholder="4."><input type="text" name="aggettivo_5" placeholder="5."><input type="text" name="aggettivo_6" placeholder="6."><input type="text" name="aggettivo_7" placeholder="7."><input type="text" name="aggettivo_8" placeholder="8."><input type="text" name="aggettivo_9" placeholder="9."><input type="text" name="aggettivo_10" placeholder="10."></div>
                     <hr>
-                    <p class="instruction-text">Ora usa lo strumento qui sotto per costruire la tua mappa...</p>
+                    <p class="instruction-text">Ora usa lo strumento qui sotto per costruire la tua mappa. Inizia aggiungendo gli aggettivi che ritieni più importanti. Poi, clicca su ogni aggettivo per collegarlo a specifiche attività che fai o contesti in cui ti trovi.</p>
                     <div class="image-container"><p><strong>Esempio di mappa:</strong></p><img src="mappa-esempio.png" alt="Esempio di una mappa concettuale"></div>
                     <div class="map-section">
                         <div id="cy"></div>
                         <div id="map-controls"><h3>Pannello di Controllo</h3><div id="controls-content"></div></div>
                     </div>
                     <hr>
-                    <details class="suggestions-container"><summary>Non trovi le parole? Clicca qui per una lista di aggettivi.</summary><table>...</table></details>
+                    <details class="suggestions-container"><summary>Non trovi le parole? Clicca qui per una lista di aggettivi.</summary>
+                        <table>
+                            <thead><tr><th>CARATTERISTICHE PERSONALI</th></tr></thead>
+                            <tbody>
+                                <tr><td>Corretto</td><td>Protettivo</td><td>Intelligente</td></tr>
+                                <tr><td>Paziente</td><td>Collaborativo</td><td>Capace di assumere responsabilità</td></tr>
+                                <tr><td>Autoritario</td><td>Estroverso</td><td>Simpatico</td></tr>
+                                <tr><td>Avventuroso</td><td>Fidato</td><td>Sincero</td></tr>
+                                <tr><td>Benevolo</td><td>Fiducioso negli altri</td><td>Socievole</td></tr>
+                                <tr><td>Calcolatore</td><td>Generoso</td><td>Creativo</td></tr>
+                                <tr><td>Calmo</td><td>Adattabile</td><td>Tenace</td></tr>
+                                <tr><td>Solidale</td><td>Intraprendente</td><td>Tollerante</td></tr>
+                                <tr><td>Capace di cambiamento</td><td>Intuitivo</td><td>Umile</td></tr>
+                                <tr><td>Competente</td><td>Portato al risultato</td><td>Sensibile</td></tr>
+                                <tr><td>Comunicativo</td><td>Preciso</td><td>Affidabile</td></tr>
+                                <tr><td>Leale</td><td>Coinvolgente</td><td>Deciso</td></tr>
+                                <tr><td>Costante</td><td>Razionale</td><td>Sicuro di sé</td></tr>
+                            </tbody>
+                        </table>
+                    </details>
                     <hr>
                     <p class="instruction-text">Prova a pensare alle tue caratteristiche personali.</p>
-                    <div class="form-group"><label for="scheda1_attivita_preferite">Tra le attività che hai descritto...</label><textarea id="scheda1_attivita_preferite" name="scheda1_attivita_preferite" rows="5"></textarea></div>
-                    <div class="form-group"><label for="scheda1_preferenze_scolastiche">E rispetto alla scuola, cosa ti piace?</label><textarea id="scheda1_preferenze_scolastiche" name="scheda1_preferenze_scolastiche" rows="5"></textarea></div>
+                    <div class="form-group"><label for="scheda1_attivita_preferite">Tra le attività che hai descritto nella mappa, scegli le due che ti piacciono di più e prova a dire perché.</label><textarea id="scheda1_attivita_preferite" name="scheda1_attivita_preferite" rows="5"></textarea></div>
+                    <div class="form-group"><label for="scheda1_preferenze_scolastiche">E rispetto alla scuola, cosa ti piace? Ci sono materie o argomenti che ti piacciono e che ti piacerebbe approfondire?</label><textarea id="scheda1_preferenze_scolastiche" name="scheda1_preferenze_scolastiche" rows="5"></textarea></div>
                 </fieldset>
+
                 <fieldset>
                     <legend>SCHEDA 2 – UN PENSIERO SUL LAVORO</legend>
-                    </fieldset>
+                    <div class="form-group"><label for="scheda2_cosa_e_lavoro">Secondo te, cosa è il lavoro?</label><textarea id="scheda2_cosa_e_lavoro" name="scheda2_cosa_e_lavoro" rows="5"></textarea></div>
+                    <div class="form-group"><label for="scheda2_perche_si_lavora">Perché le persone lavorano?</label><textarea id="scheda2_perche_si_lavora" name="scheda2_perche_si_lavora" rows="5"></textarea></div>
+                    <div class="form-group"><label for="scheda2_se_nessuno_lavorasse">Se nessuno lavorasse, cosa succederebbe?</label><textarea id="scheda2_se_nessuno_lavorasse" name="scheda2_se_nessuno_lavorasse" rows="5"></textarea></div>
+                    <div class="form-group"><label for="scheda2_come_mi_sento">Se penso al lavoro, mi sento...</label><textarea id="scheda2_come_mi_sento" name="scheda2_come_mi_sento" rows="3"></textarea></div>
+                </fieldset>
+
                 <fieldset>
                     <legend>SCHEDA 3 – MODI DI LAVORARE</legend>
-                    </fieldset>
+                    <div class="instruction-text">
+                        <p>Esistono quattro principali modi diversi di lavorare...</p>
+                        <p><strong>... con la GENTE:</strong> quando si hanno frequenti o continui rapporti con molte persone...</p>
+                        <p><strong>... con i DATI:</strong> quando si ha a che fare con la registrazione, il calcolo, l'elaborazione di dati statistici...</p>
+                        <p><strong>... con le IDEE:</strong> quando si producono concetti astratti, idee artistiche, scientifiche...</p>
+                        <p><strong>... con le COSE:</strong> quando si debbono manipolare dei materiali o degli oggetti...</p>
+                        <hr>
+                        <p>Ora, prova a compilare il questionario seguente, indicando quali modalità senti più tue...</p>
+                    </div>
+                    <h4 class="centered-subtitle">QUESTIONARIO DI AUTOVALUTAZIONE</h4>
+                    <p>Segna con una crocetta le affermazioni che descrivono chi sei e i tuoi interessi.</p>
+                    <div class="autovalutazione-container">
+                        <div class="lavoro-categoria">
+                            <h5>LAVORARE CON LA GENTE</h5>
+                            <div class="checkbox-group">
+                                <label><input type="checkbox" name="gente_1" data-category="gente"> Nelle interrogazioni orali ti esprimi con disinvoltura</label>
+                                <label><input type="checkbox" name="gente_10" data-category="gente"> Ti piacerebbe svolgere un servizio volontario...</label>
+                            </div>
+                        </div>
+                        <div class="lavoro-categoria">
+                            <h5>LAVORARE CON I DATI</h5>
+                            <div class="checkbox-group">
+                                <label><input type="checkbox" name="dati_1" data-category="dati"> Ti piace fare i calcoli di matematica</label>
+                                <label><input type="checkbox" name="dati_10" data-category="dati"> Sei costante nel dedicarti agli impegni che ti assumi</label>
+                            </div>
+                        </div>
+                        <div class="lavoro-categoria">
+                            <h5>LAVORARE CON LE IDEE</h5>
+                            <div class="checkbox-group">
+                                <label><input type="checkbox" name="idee_1" data-category="idee"> Ti piace studiare...</label>
+                                <label><input type="checkbox" name="idee_10" data-category="idee"> Per capire idee e concetti astratti...</label>
+                            </div>
+                        </div>
+                        <div class="lavoro-categoria">
+                            <h5>LAVORARE CON LE COSE</h5>
+                            <div class="checkbox-group">
+                                <label><input type="checkbox" name="cose_1" data-category="cose"> Riesci bene nei piccoli lavori manuali</label>
+                                <label><input type="checkbox" name="cose_10" data-category="cose"> Ami la natura e ti piacerebbe lavorare...</label>
+                            </div>
+                        </div>
+                    </div>
+                    <hr>
+                    <h4>RIEPILOGO PUNTEGGI</h4>
+                    <table class="score-summary-table">
+                        <tbody>
+                            <tr><td>LAVORARE CON LA GENTE:</td><td><span id="punteggio-gente">0</span></td><td>LAVORARE CON LE IDEE:</td><td><span id="punteggio-idee">0</span></td></tr>
+                            <tr><td>LAVORARE CON I DATI:</td><td><span id="punteggio-dati">0</span></td><td>LAVORARE CON LE COSE:</td><td><span id="punteggio-cose">0</span></td></tr>
+                        </tbody>
+                    </table>
+                    <hr>
+                    <p class="instruction-text">Adesso, prova a riflettere, rispondendo a questa domanda:</p>
+                    <div class="form-group"><label for="scheda3_riflessione">Cosa hai capito di te? Quale potrebbe essere la modalità di lavorare migliore per te?</label><textarea id="scheda3_riflessione" name="scheda3_riflessione" rows="5"></textarea></div>
+                </fieldset>
+
                 <fieldset>
                     <legend>SCHEDA 4 – TUTTE LE POSSIBILI STRADE</legend>
-                    </fieldset>
+                    <p class="instruction-text">Considerate tutte le “scoperte” che hai fatto con le schede precedenti, quale o quali lavori ti piacerebbe fare da grande?</p>
+                    <div class="form-group"><textarea name="scheda4_lavori_desiderati" rows="4"></textarea></div>
+                    <p class="instruction-text">Come ti immagini mentre svolgi uno di questi lavori? (Dove lavori? Cosa fai? Con chi lavori?)</p>
+                    <div class="form-group"><textarea name="scheda4_immaginario_lavoro" rows="6"></textarea></div>
+                    <p class="instruction-text">Perché pensi che questo lavoro faccia per te? (...)</p>
+                    <div class="form-group"><textarea name="scheda4_motivazioni" rows="8"></textarea></div>
+                    <p class="instruction-text">Quali desideri, sogni, obiettivi pensi di poter realizzare con questo lavoro?</p>
+                    <div class="form-group"><textarea name="scheda4_desideri_sogni" rows="6"></textarea></div>
+                    <p class="instruction-text">C'è qualcuno che ammiri o che ti ispira per il suo lavoro o il suo modo di vivere?</p>
+                    <div class="form-group"><textarea name="scheda4_ispirazione" rows="4"></textarea></div>
+                    <hr>
+                    <h4 class="centered-subtitle">ADESSO - Come mi preparo al mio futuro?</h4>
+                    <p class="instruction-text">Ora serve un ultimo sforzo per riflettere...</p>
+                    <div class="form-group"><label for="scheda4_modo_studiare">Qual è il modo di studiare che funziona meglio per te?</label><textarea id="scheda4_modo_studiare" name="scheda4_modo_studiare" rows="6"></textarea></div>
+                </fieldset>
+                
                 <button type="submit" class="submit-btn">Invia e Salva i Dati</button>
             </form>
+            
             <div id="completion-section" style="display:none;">
                 <h2>Grazie per aver completato il questionario!</h2>
                 <p>Le tue risposte sono state salvate correttamente.</p>
