--- a/index.html
+++ b/index.html
@@ -19,8 +19,8 @@
             <div class="choice-box">
                 <h2>Benvenuto/a</h2>
                 <p>Seleziona il percorso che vuoi iniziare:</p>
-                <a href="#/studente/anno-1" class="choice-button">Questionario Studente (Anno 1)</a>
-                <a href="#/studente/anno-2-3" class="choice-button disabled">Questionario Studente (Anno 2-3) - Prossimamente</a>
+                <a href="#/studente/anno-1" class="choice-button">Questionario Studente (I Anno)</a>
+                <a href="#/studente/anno-2-3" class="choice-button disabled">Questionario Studente (II e III Anno) - Prossimamente</a>
                 <a href="#/docente/login" class="choice-button disabled">Accesso Docente - Prossimamente</a>
             </div>
         </div>
