--- a/index.html
+++ b/index.html
@@ -208,12 +208,15 @@
         </div>
 
         <div id="dashboard-view" class="view" style="display: none;">
-            <div class="dashboard-header">
-                <h2>Dashboard Docente</h2>
-                <button id="logout-btn" class="logout-btn">Esci</button>
-            </div>
-            <p>Benvenuto/a nell'area riservata. Da qui potrai visualizzare i risultati degli studenti e compilare le schede del conduttore.</p>
+    <div class="dashboard-header">
+        <h2>Dashboard Docente</h2>
+        <button id="logout-btn" class="logout-btn">Esci</button>
+    </div>
+    <p>Benvenuto/a nell'area riservata. Da qui potrai visualizzare i risultati degli studenti e compilare le schede del conduttore.</p>
+    
+    <div id="student-list-container">
         </div>
+</div>
     </main>
 
     <script>
