--- a/index.html
+++ b/index.html
@@ -217,6 +217,21 @@
     <div id="student-list-container">
         </div>
 </div>
+<!DOCTYPE html>
+<html lang="it">
+<body>
+    <main>
+        <div id="student-detail-view" class="view" style="display: none;">
+            <div class="detail-header">
+                <a href="#/docente/dashboard" class="back-link">&larr; Torna alla Dashboard</a>
+                <h2 id="student-name-title">Dettaglio Studente</h2>
+            </div>
+            <div id="student-detail-content">
+                </div>
+        </div>
+    </main>
+    </body>
+</html>
     </main>
 
     <script>
