--- a/index.html
+++ b/index.html
@@ -211,8 +211,8 @@
             <div class="dashboard-header">
                 <h2>Dashboard Docente</h2>
                 <div class="dashboard-actions">
-                    <button id="show-fase1-btn" class="action-btn">Compila Fase 1 (Griglia Osservazione)</button>
-                    <button id="show-fase3-btn" class="action-btn">Compila Fase 3 (Sintesi Classe)</button>
+                    <button id="show-fase1-btn" class="action-btn">Compila Fase 1 (Griglia di Osservazione della Classe)</button>
+                    <button id="show-fase3-btn" class="action-btn">Compila Fase 3 (Scheda di Sintesi Generale)</button>
                 </div>
                 <button id="logout-btn" class="logout-btn">Esci</button>
             </div>
