--- a/index.html
+++ b/index.html
@@ -218,25 +218,17 @@
             </div>
             <div id="student-list-container"></div>
         </div>
-</div>
-<!DOCTYPE html>
-<html lang="it">
-<body>
-    <main>
-        <div id="student-detail-view" class="view" style="display: none;">
-            <div class="detail-header">
-                <a href="#/docente/dashboard" class="back-link">&larr; Torna alla Dashboard</a>
-                <h2 id="student-name-title">Dettaglio Studente</h2>
-            </div>
-            <div class="dashboard-actions">
-                 <button id="show-fase2-btn" class="action-btn">Compila Fase 2 (Sintesi Individuale)</button>
-            </div>
-            <div id="student-detail-content"></div>
+<!-- Vista dettaglio studente -->
+    <div id="student-detail-view" class="view" style="display: none;">
+        <div class="detail-header">
+            <a href="#/docente/dashboard" class="back-link">&larr; Torna alla Dashboard</a>
+            <h2 id="student-name-title">Dettaglio Studente</h2>
         </div>
-    </main>
-    </body>
-</html>
-    </main>
+        <div class="dashboard-actions">
+            <button id="show-fase2-btn" class="action-btn">Compila Fase 2 (Sintesi Individuale)</button>
+        </div>
+        <div id="student-detail-content"></div>
+    </div>
 <div id="modal-container" class="modal-container" style="display: none;">
         <div class="modal-content">
             <button class="close-modal-btn">&times;</button>
