--- a/index.html
+++ b/index.html
@@ -229,6 +229,7 @@
         </div>
         <div id="student-detail-content"></div>
     </div>
+</main>
 <div id="modal-container" class="modal-container" style="display: none;">
         <div class="modal-content">
             <button class="close-modal-btn">&times;</button>
