--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 <main>
   <div id="form-container"></div>
+</main>
         <div id="dashboard-view" class="view" style="display: none;">
             <div class="dashboard-header">
                 <h2>Dashboard Docente</h2>
